[gd_scene load_steps=10 format=3 uid="uid://d4bcn30x4obem"]

[ext_resource type="Script" uid="uid://dfsrfo4ha0oi" path="res://scenes/game/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://bao0j5jeywbhh" path="res://assets/space_nebula_5k_8k.jpg" id="2_bdhmt"]
[ext_resource type="PackedScene" uid="uid://b22u8ju53pwj5" path="res://scenes/earth/earth.tscn" id="3_iywne"]
[ext_resource type="PackedScene" uid="uid://xbn80o6o2k5d" path="res://scenes/map/placement_square.tscn" id="5_iywne"]
[ext_resource type="AudioStream" uid="uid://jcsiol1fkntk" path="res://assets/music_tracks/WhatsApp Audio 2025-10-02 at 19.44.39_de828ccd.mp3" id="7_bdhmt"]
[ext_resource type="PackedScene" uid="uid://b7qsbt7e8wdeu" path="res://scenes/game/game_over_screen.tscn" id="8_2a8rs"]
[ext_resource type="PackedScene" uid="uid://onpkcc7vhp7c" path="res://scenes/game/hud.tscn" id="8_87uf6"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_p57ef"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u5sy4"]
normal = Vector2(-1, 0)
distance = -1899.0

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource("1_lbhrr")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1903.0
offset_bottom = 897.0
texture = ExtResource("2_bdhmt")
expand_mode = 1

[node name="HUD" parent="." instance=ExtResource("8_87uf6")]

[node name="BossLabel" type="Label" parent="."]
visible = false
offset_top = 337.0
offset_right = 1899.0
offset_bottom = 478.0
theme_override_font_sizes/font_size = 70
text = "BOSS ASTEROID APPROACHING
"
horizontal_alignment = 1

[node name="Earth" parent="." instance=ExtResource("3_iywne")]
position = Vector2(966, 886)

[node name="SideBorders" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="BorderLeft" type="CollisionShape2D" parent="SideBorders"]
position = Vector2(-1, 1)
shape = SubResource("WorldBoundaryShape2D_p57ef")

[node name="BorderRight" type="CollisionShape2D" parent="SideBorders"]
shape = SubResource("WorldBoundaryShape2D_u5sy4")

[node name="Timers" type="Node2D" parent="."]

[node name="AsteroidTimer" type="Timer" parent="Timers"]
wait_time = 4.0

[node name="RoundTimer" type="Timer" parent="Timers"]
wait_time = 120.0

[node name="BuildupTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_bdhmt")
autoplay = true
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("8_2a8rs")]
visible = false

[node name="PlacementSquares" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="PlacementSquare" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 690.0
offset_top = 657.0
offset_right = 774.0
offset_bottom = 741.0

[node name="PlacementSquare2" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 1097.0
offset_top = 657.0
offset_right = 1181.0
offset_bottom = 741.0

[node name="PlacementSquare3" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 487.0
offset_top = 657.0
offset_right = 571.0
offset_bottom = 741.0

[node name="PlacementSquare4" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 1298.0
offset_top = 657.0
offset_right = 1382.0
offset_bottom = 741.0

[node name="PlacementSquare5" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 284.0
offset_top = 657.0
offset_right = 368.0
offset_bottom = 741.0

[node name="PlacementSquare6" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 1502.0
offset_top = 657.0
offset_right = 1586.0
offset_bottom = 741.0

[node name="PlacementSquare7" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 82.0
offset_top = 657.0
offset_right = 166.0
offset_bottom = 741.0

[node name="PlacementSquare8" parent="PlacementSquares" instance=ExtResource("5_iywne")]
offset_left = 1706.0
offset_top = 657.0
offset_right = 1790.0
offset_bottom = 741.0

[node name="LightmapGI" type="LightmapGI" parent="."]
layers = 1048575

[connection signal="EndGame" from="Earth" to="." method="_on_earth_end_game"]
[connection signal="timeout" from="Timers/AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
[connection signal="timeout" from="Timers/RoundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="Timers/BuildupTimer" to="." method="_on_buildup_timer_timeout"]
